[gd_scene load_steps=6 format=2]

[ext_resource path="res://Projectiles/proj_small_blue.png" type="Texture" id=1]
[ext_resource path="res://ProjectileInstance.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 1000.0

[node name="ProjectileInstance" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionSquare" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollisionCircle" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="Homing" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Homing"]
shape = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_ProjectileInstance_area_entered"]
[connection signal="area_entered" from="Homing" to="." method="_on_Homing_area_entered"]
[connection signal="area_exited" from="Homing" to="." method="_on_Homing_area_exited"]
